<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:src="@drawable/world_map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/imageView"
        android:layout_marginBottom="65dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"/>
    <TextView
        android:textColor="@color/red"
        android:textSize="30sp"
        android:text="@string/Hello_map_part1"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:id="@+id/textView4"
        android:layout_marginLeft="65dp"
        android:layout_marginStart="65dp"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/imageView"
        android:layout_alignStart="@+id/imageView" />
    <TextView
        android:textColor="@color/orange"
        android:textSize="30sp"
        android:text="@string/Hello_map_part2"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:gravity="center"
        android:layout_marginBottom="10dp"

        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/textView4"
        android:layout_toEndOf="@+id/textView4"
        android:id="@+id/textView5" />
    <TextView
        android:textColor="@color/yellow"
        android:textSize="30sp"
        android:text="@string/Hello_map_part3"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/textView5"
        android:layout_toEndOf="@+id/textView5"
        android:id="@+id/textView6" />
    <TextView
        android:textColor="@color/green"
        android:textSize="30sp"
        android:text="@string/Hello_map_part4"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:id="@+id/textView3"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/textView6"
        android:layout_toEndOf="@+id/textView6" />
    <TextView
        android:textColor="@color/blue"
        android:textSize="30sp"
        android:text="@string/Hello_map_part5"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:id="@+id/textView"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/textView3"
        android:layout_toEndOf="@+id/textView3" />
    <TextView
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        android:text="@string/Hello_map_part6"
        android:layout_marginBottom="10dp"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/textView"
        android:layout_toEndOf="@+id/textView"
        android:id="@+id/textView7" />
    <TextView
        android:textColor="@color/puper"
        android:textSize="30sp"
        android:text="@string/Hello_map_part7"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/textView7"
        android:layout_toEndOf="@+id/textView7" />
</RelativeLayout>